# transfer-bot

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  ansible.cfg  app.py  bot_v3.py  deploy.yml  inventory.ini  passengers.csv  pyproject.toml  requirements-test.txt  requirements.txt
config/: settings.py
database/: backup.py  connection.py  init_db.py  repositories.py
handlers/: base_handler.py  booking_handler.py  broadcast_chief_handler.py  callback_handler.py  export_handler.py  info_handler.py  personal_data_handler.py  start_handler.py  view_booking_handler.py  waiting_list_handler.py
models/: entities.py
scripts/: backup_transfer_bot_db.sh
services/: booking_service.py  broadcast_service.py  bus_service.py  export_service.py  passenger_service.py  waiting_list_service.py
templates/: env.j2  transfer-bot.service.j2
tests/: README.md  __init__.py  conftest.py  test_all_fixtures.py  test_fixtures_simple.py
tests/factories/: __init__.py  model_factories.py  polyfactory_v2_factories.py  robust_factories.py  simple_factories.py
tests/fixtures/: database_fixtures.py
tests/integration/: test_booking_flow.py  test_broadcast_chief_flow.py  test_broadcast_chief_handler_flow.py  test_export_flow.py  test_personal_data_flow.py
tests/unit/: __init__.py  test_backup.py  test_handlers.py  test_models.py  test_repositories.py  test_services.py  test_utils.py
utils/: const.py  keyboards.py  messages.py  validators.py
