[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfer-bot"
version = "1.0.0"
description = "Telegram бот для управления трансферами на корпоративные мероприятия"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Transfer Bot Team", email = "admin@example.com"}
]
maintainers = [
    {name = "Transfer Bot Team", email = "admin@example.com"}
]
keywords = [
    "telegram", 
    "bot", 
    "transfer", 
    "booking", 
    "transport", 
    "corporate-events"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Scheduling",
]
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.9.0",
    "cachetools>=5.5.2",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.1",
    "et_xmlfile>=2.0.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "idna>=3.10",
    "oauth2client>=4.1.3",
    "oauthlib>=3.2.2",
    "openpyxl>=3.1.5",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "typing_extensions>=4.13.2",
    "urllib3>=2.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/transfer-bot"
Repository = "https://github.com/your-org/transfer-bot"
Documentation = "https://github.com/your-org/transfer-bot#readme"
"Bug Tracker" = "https://github.com/your-org/transfer-bot/issues"

[project.scripts]
transfer-bot = "app:main"
transfer-bot-backup = "database.backup:main"

# Настройки pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Настройки покрытия кода
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "archive/*",
    "venv/*",
    ".venv/*",
    "*/venv/*",
    "*/.venv/*",
    "setup.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Настройки Black (форматирование кода)
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

# Настройки isort (сортировка импортов)
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["config", "database", "handlers", "models", "services", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Настройки mypy (статический анализ типов)
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "google.*",
    "gspread.*",
    "oauth2client.*",
    "openpyxl.*",
]
ignore_missing_imports = true

# Настройки setuptools
[tool.setuptools]
packages = ["config", "database", "handlers", "models", "services", "utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
